-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.6.1
-
None
-
Windows 7 x86, Microsoft Windows SDK 7.1 (msvc-2010), Qt 5.0.0 (Release), QtCreator 2.6.1 (included in the Qt5.0.0 release package).
Steps to reproduce:
1. Have clean Windows 7 x86.
2. Install Microsoft Windows SDK 7.1 x86
3. Install "Qt 5.0 Release" package from official dowload section http://qt-project.org/downloads.
4. Start QtCreator 2.6.1 included in the package (seems to be build with Qt 5.0)
and create any simple C++ project.
5. It doens't build and stop on any first *.cpp file. There is error in output pane
"'cl' is not recognized as an internal or external command. ..... Error 1"
I understand that it's a path problem. But QtCreator 2.6.1 downloaded separatly from http://qt-project.org/downloads has not such problems (seems to be built with Qt 4.8.4).
I tried to point compiler path "c:\Program Files\Microsoft Visual Studio 10.0\VC\bin\" there in the environment variables but it outputs another errors "..... Error 2.".
I understand that workaround can be found, because it's simply connected with setting of compiler/linker/libs paths. But it is not obvious how to make it correctly at all. And for some people it means that QtCreator 2.6.1 included in the Qt5.0 release package is not working with one of the most common Windows tool-chain at least. So i think that it's very important bug.