Only show Visual Studio compilers if VS is installed

Task-number: QTCREATORBUG-8487

Change-Id: Ibc812f14cd8e4de765cabf27d23451c06611d372
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Daniel Teske <daniel.teske@digia.com>